--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="acnav" >
-            <ul class="nav"><a href="home.html">Home</a></ul>
+            <ul class="nav"><a href="index.html">Home</a></ul>
             <ul class="nav"><a href="skill.html">Skils</a></ul>
             <ul class="nav"><a href="about.html">About</a></ul>
         </nav>
