--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="divnav">
             <nav class="acnav" >
-                <ul class="nav"><a href="home.html">Home</a></ul>
+                <ul class="nav"><a href="index.html">Home</a></ul>
                 <ul class="nav"><a href="skill.html">Skils</a></ul>
                 <ul class="nav"><a href="about.html">About</a></ul>
             </nav>
