--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="divnav">
             <nav class="acnav" >
                 <ul class="nav"><a href="index.html">Home</a></ul>
-                <ul class="nav"><a href="skill.html">Skils</a></ul>
+                <ul class="nav"><a href="skill.html">Skills</a></ul>
                 <ul class="nav"><a href="about.html">About</a></ul>
             </nav>
         </div>
