--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="acnav" >
             <ul class="nav"><a href="index.html">Home</a></ul>
-            <ul class="nav"><a href="skill.html">Skils</a></ul>
+            <ul class="nav"><a href="skill.html">Skills</a></ul>
             <ul class="nav"><a href="about.html">About</a></ul>
         </nav>
     </header>
