--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="quick">
         <h2> My name is,</h2>
         <h2>Jackinley Elizer Laurent,</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae? Ipsum cumque nam in voluptate esse, repellendus dolorem fugiat officia totam eaque ad, debitis voluptatem a eum ducimus repellat qui.</p>
-        <!-- <h3>I'm full stack a web developer</h3> -->
+        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, beatae? Ipsum cumque nam in voluptate esse, repellendus dolorem fugiat officia totam eaque ad, debitis voluptatem a eum ducimus repellat qui.</p> -->
+        <h3>Junior web developer</h3>
     </div>
     <a class='fa fa-github' id="sepa" href="https://github.com/laurentjackinley">GitHub</a>
     <a class='fa fa-linkedin' id="sepa" href="https://www.linkedin.com/in/jackinley-laurent-232357233/">LinkedIn</a>
