--- a/about.html
+++ b/about.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="about.css">
-</head>
-<body>
+    <link rel="stylesheet" href="about.css" />
+  </head>
+  <body>
     <header>
-        <nav class="acnav" >
-            <ul class="nav"><a href="index.html">Home</a></ul>
-            <ul class="nav"><a href="skill.html">Skills</a></ul>
-            <ul class="nav"><a href="about.html">About</a></ul>
-        </nav>
+      <nav class="acnav">
+        <ul class="nav">
+          <a href="index.html">Home</a>
+        </ul>
+        <ul class="nav">
+          <a href="skill.html">Skills</a>
+        </ul>
+        <ul class="nav">
+          <a href="about.html">About</a>
+        </ul>
+      </nav>
     </header>
-    <h1>hfsdlgjhsadk</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi, ullam veniam. Vel reprehenderit a id. Sequi voluptate dolores numquam aliquid recusandae, architecto cupiditate, itaque quisquam, deserunt excepturi in aperiam commodi.</p>
-    
-</body>
+    <h1>About me</h1>
+    <p>
+      My name is Jackinley Laurent, I love to play soccer, and hicking. Love to
+      spend time with my family, I can be quiet at time, but I'm the most
+      friendly person you'll ever meet.
+    </p>
+  </body>
 </html>
