--- a/skill.html
+++ b/skill.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="skill.css">
-</head>
-<body>
+    <link rel="stylesheet" href="skill.css" />
+  </head>
+  <body>
     <header>
-        <nav class="acnav" >
-            <ul class="nav"><a href="index.html">Home</a></ul>
-            <ul class="nav"><a href="skill.html">Skills</a></ul>
-            <ul class="nav"><a href="about.html">About</a></ul>
-        </nav>
+      <nav class="acnav">
+        <ul class="nav">
+          <a href="index.html">Home</a>
+        </ul>
+        <ul class="nav">
+          <a href="skill.html">Skills</a>
+        </ul>
+        <ul class="nav">
+          <a href="about.html">About</a>
+        </ul>
+      </nav>
     </header>
     <div id="pos">
-        <ul class="ulskill">
-            <li>Html5</li>
-            <li>Css</li>
-            <li>Javascript</li>
-            <li>Node.js</li>
-            <li>Express</li>
-            <li>Git</li>
-            <li>PostgreSQL</li>
-            <!-- <li>Bscript</li> -->
-            <li>Github</li>
-            <!-- <li>OAuth</li> -->
-            <li>Postman</li>
-            <li>Heroku</li>
-            <li>Axios</li>
-            <li>Jest</li>
-        </ul>
+      <ul class="ulskill">
+        <li>Html5</li>
+        <li>Css</li>
+        <li>Javascript</li>
+        <li>Node.js</li>
+        <li>Express</li>
+        <li>Git</li>
+        <li>PostgreSQL</li>
+        <li>Bscript</li>
+        <li>Github</li>
+        <li>OAuth</li>
+        <li>Postman</li>
+        <li>Heroku</li>
+        <li>Axios</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>Jest</li>
+        <li>MySQL</li>
+      </ul>
     </div>
     <div id="content" style="position: absolute; top: 100px; left: 60%">
-        <h1>Projects</h1>
-        <iframe id="video" src="https://youtube.com/embed/E1NtyMCVH5E" width="150" height="150"></iframe>
+      <h1>Projects</h1>
+      <iframe
+        id="video"
+        src="https://youtube.com/embed/E1NtyMCVH5E"
+        width="150"
+        height="150"
+      ></iframe>
+      <iframe
+        id="video2"
+        src="https://www.youtube.com/embed/uKaYuEc4mVk"
+        width="150"
+        height="150"
+      ></iframe>
     </div>
-</body>
+  </body>
 </html>
